--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "log-lens"
-version = "0.1.0"
+version = "0.2.0"
 description = "Lightweight CLI for analyzing server log files"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -18,7 +18,9 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
-dependencies = []
+dependencies = [
+  "rich>=13.0.0",
+]
 
 [project.optional-dependencies]
 dev = [
