--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,15 @@ build-backend = "hatchling.build"
 
 [project]
 name = "log-lens"
-version = "0.2.0"
-description = "Lightweight CLI for analyzing server log files"
+version = "0.4.0"
+description = "Lightweight CLI for analyzing Apache/Nginx server logs"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 authors = [
   {name = "KnowOneActual", email = "your-email@example.com"},
 ]
-keywords = ["logs", "analysis", "cli", "server"]
+keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
