--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
 ]
 dependencies = [
     "rich>=13.0.0",
+    "click>=8.0.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
@@ -26,6 +28,7 @@ dev = [
     "isort",
     "mypy",
     "pytest",
+    "pytest-cov",
     "ruff",
     "pre-commit",
 ]
@@ -35,6 +38,34 @@ log-lens = "log_lens.cli:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/log_lens"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/tests",
+    "/docs",
+]
+
+[tool.black]
+line-length = 100
+target-version = ['py38']
+
+[tool.isort]
+profile = "black"
+line_length = 100
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "--strict-markers"
+markers = [
+    "integration: mark test as an integration test",
+]
 
 [project.urls]
 Homepage = "https://github.com/KnowOneActual/log-lens"
