--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "log-lens"
 version = "0.4.0"
 description = "Lightweight CLI for analyzing Apache/Nginx server logs"
-authors = [{name = "KnowOneActual", email = "your-email@example.com"}]
+authors = ["KnowOneActual <your-email@example.com>"]
 readme = "README.md"
 license = "MIT"
 keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
