--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,17 @@ repos:
     rev: 24.4.2
     hooks:
       - id: black
+        exclude: ^src/
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
+        exclude: ^src/
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.1
     hooks:
       - id: ruff
         args: [--fix]
+        exclude: ^src/
       - id: ruff-format
+        exclude: ^src/
