--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: { python-version: '3.12' }
-      - run: pip install -e .[dev] pre-commit
-      - run: pre-commit run --all-files
-      - run: pytest tests/
+      - run: pip install poetry
+      - run: poetry install
+      - run: poetry run pre-commit run --all-files
+      - run: poetry run pytest tests/
