--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "log-lens"
 version = "0.4.0"
 description = "Lightweight CLI for analyzing Apache/Nginx server logs"
-authors = ["KnowOneActual <your-email@example.com>"]
+authors = ["KnowOneActual"]
 readme = "README.md"
 license = "MIT"
 keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
@@ -25,8 +25,6 @@ click = ">=8.0.0"
 pyyaml = ">=6.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.0.0"
-isort = "^5.13.0"
 mypy = "^1.8.0"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
@@ -40,14 +38,6 @@ log-lens = "log_lens.cli:main"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 100
-target-version = ['py39']
-
-[tool.isort]
-profile = "black"
-line_length = 100
 
 [tool.mypy]
 python_version = "3.9"
@@ -65,3 +55,9 @@ markers = [
 [tool.ruff]
 line-length = 100
 target-version = "py39"
+
+[tool.ruff.lint]
+select = ["E", "F", "I"] # Enforce Error, Pyflakes, and Isort rules
+
+[tool.ruff.lint.isort]
+known-first-party = ["log_lens"]
